compiler/crates/types/tests/typeerr/fn_param_flows.th
สูตร greet(s: ข้อความ) {
    ให้ n: จำนวนเต็ม = s;
}
